--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-:root{
+:root {
     --branco-principal: #FFFFFF;
     --cinza--secundario: #F9F9F9;
     --cinza-terciario: #C0C0C0;
@@ -9,8 +9,7 @@
     --fonte--principal: 'Inter', sans-serif;
 }
 
-body{
-
+body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
     font-family: var(--fonte--principal);
@@ -18,13 +17,13 @@ body{
     font-weight: 400;
 }
 
-.container{
+.container {
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
 }
 
-.principal{
+.principal {
     background-image: url("../assets/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
@@ -32,22 +31,22 @@ body{
     text-align: center;
 }
 
-.container__div{
+.container__div {
     margin: 0 6em;
     padding: 2em;
 }
 
-.container__titulo{
+.container__titulo {
     font-size: 28px;
     font-weight: 700;
     line-height: 120%;
 }
 
-.container__imagem{
+.container__imagem {
     margin: 1em 0 2em 0;
 }
 
-.container__botao{
+.container__botao {
     background-color: var(--botao--azul);
     border-radius: 8px;
     padding: 1em;
@@ -57,11 +56,11 @@ body{
     margin-bottom: 1em;
 }
 
-.container__botao:hover{
+.container__botao:hover {
     opacity: 0.9;
 }
 
-.botao__secundario{
+.botao__secundario {
     background-color: transparent;
     color: var(--branco-principal);
     border-radius: 8px;
@@ -69,108 +68,183 @@ body{
     text-decoration: none;
 }
 
-.container__aviso{
+.container__aviso {
     color: var(--cinza--secundario);
     font-size: 12px;
 }
 
-.secundario{
+.secundario {
     align-items: center;
     margin: 0 10%;
 }
 
-.container__secundario__imagem{
+.container__secundario__titulo {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.container__secundario__imagem {
     width: 80%;
 }
 
-.container__secundario__descricao__subtitulo{
+.container__secundario__descricao__subtitulo {
     font-size: 48px;
     font-weight: 700;
     color: var(--branco-principal);
     margin-bottom: 0.1em;
 }
 
-.container__secundario__descricao__paragrafo{
+.container__secundario__descricao__paragrafo {
     font-weight: 400;
     line-height: 150%;
     color: var(--cinza-terciario);
     text-align: justify;
 }
 
-.secundario__botao{
+.secundario__botao {
     margin-top: 1em;
     display: inline-block;
 }
 
-.dispositivos{
+.dispositivos {
     text-align: center;
 }
 
-.dispositivos__titulo{
+.dispositivos__titulo {
     font-size: 48px;
     font-weight: 700;
     line-height: 120%;
     color: var(--branco-principal);
 }
 
-.lista__item{
+.lista__item {
     font-size: 32px;
     font-weight: 700;
     line-height: 120%;
     color: var(--branco-principal);
 }
 
-.dispositivos__lista{
+.dispositivos__lista {
     list-style-type: none;
     display: flex;
     justify-content: center;
     margin: 5em 0 10em 0;
 }
 
-.rodape{
+.rodape {
     text-align: center;
     padding: 0 4%;
 
 }
 
-.rodape__logo{
+.rodape__logo {
     margin: 2em 0;
 }
 
 
-.rodape__logo:hover{
+.rodape__logo:hover {
     opacity: 0.9;
 }
 
-.rodape__lista{
+.rodape__lista {
     display: flex;
     justify-content: center;
     list-style-type: none;
     gap: 1%;
 }
 
-.rodape__lista__link{
+.rodape__lista__link {
     text-decoration: none;
     margin: 1em 0;
 }
 
-.rodape__lista__link__item{
+.rodape__lista__link__item {
     color: var(--branco-principal);
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
 }
 
-.rodape__lista__link__item:hover{
+.rodape__lista__link__item:hover {
     color: var(--cinza-terciario);
 }
 
-.rodape__lista__link__item:active{
+.rodape__lista__link__item:active {
     color: var(--botao--azul);
 }
 
-.rodape__paragrafo{
+.rodape__paragrafo {
     font-size: 14px;
     color: var(--cinza-terciario);
     margin: 1em 0;
+}
+
+@media screen and (max-width: 768px) {
+
+    .container {
+        display: block;
+        background-image: none;
+    }
+
+    .container__titulo {
+        margin-bottom: 0.5em;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__div {
+        margin: 2em 1em;
+    }
+
+    .secundario {
+        display: flex;
+        flex-direction: column-reverse;
+        margin: 0;
+        text-align: center;
+    }
+
+    .container__secundario__titulo {
+        font-size: 36px;
+        margin-bottom: 0.5em;
+    }
+
+    .container__secundario__descricao__subtitulo {
+        font-size: 36px;
+        margin-bottom: 0.5em;
+    }
+
+    .container__secundario__imagem {
+        width: 60vw;
+    }
+
+    .dispositivos {
+        text-align: center;
+        padding: 10%;
+    }
+
+    .dispositivos__lista {
+        display: block;
+        text-align: center;
+    }
+
+    .dispositivos__titulo {
+        font-size: 36px;
+    }
+
+    .lista__item {
+        font-size: 24px;
+    }
+
+    .dispositivos__lista__imagem {
+        width: 80vw;
+    }
+
+    .rodape__lista {
+        display: block;
+        gap: 0;
+        margin-bottom: 4em;
+    }
 }
